After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740829 - Wrong signature for org.bluez.Agent1.DisplayPasskey
Wrong signature for org.bluez.Agent1.DisplayPasskey
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2014-11-28 00:54 UTC by Robert Ancell
Modified: 2015-04-07 15:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix signature of org.bluez.Agent1.DisplayPasskey method (1.92 KB, patch)
2014-11-28 00:59 UTC, Robert Ancell
committed Details | Review

Description Robert Ancell 2014-11-28 00:54:57 UTC
When using the method org.bluez.Agent1.DisplayPasskey gnome-bluetooth uses the signature "ouy" for the arguments when it should be "ouq" as shows in the bluez code (client/agent.c)
Comment 1 Robert Ancell 2014-11-28 00:56:12 UTC
This was seen in Ubuntu as Bluetooth keyboards being unable to connect and may be the cause of bug 731975.
Comment 2 Robert Ancell 2014-11-28 00:59:12 UTC
Created attachment 291690 [details] [review]
Fix signature of org.bluez.Agent1.DisplayPasskey method
Comment 3 Bastien Nocera 2015-04-07 15:48:22 UTC
Pushed to master (for 3.16 and later), gnome-3-14 and gnome-3-12.