lib: Fix signature of org.bluez.Agent1.DisplayPasskey method

This would cause devices that require this method to be unable to connect
(e.g. keyboards).

https://bugzilla.gnome.org/show_bug.cgi?id=740829